--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>用户首页</h2>
-    <a href="/buying_members">成为会员</a><br>
+    <a href="/member_coupon">领取优惠券</a><br>
     <a href="/drink">去点餐</a><br>
     <a href="/new_custom">新客专享</a><br>
     <a href="/member">会员优惠</a><br>
