--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
     <a href="/member_coupon">领取优惠券</a><br>
     <a href="/drink">去点餐</a><br>
     <a href="/new_custom">新客专享</a><br>
-    <a href="/member">会员优惠</a><br>
+    <a href="/bm_pay">购买会员</a><br>
     <a href="/big_vip">超级会员</a><br>
     <a href="loginOut">注销</a>
 </body>
