--- a/src/main/resources/templates/member_coupon.html
+++ b/src/main/resources/templates/member_coupon.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>购买会员</title>
+    <title>优惠券</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="css/login.css">
     <style>
         body{
-            text-align:center
-        }
+             text-align:center
+         }
         img{
             width: 427px;
             height: 120px;
@@ -84,7 +84,10 @@
                 <input type="radio" name="coupon"/>
             </label>
         <br>
-        <button type="button" onclick="window.location.href='main'">领取</button>
+        <div class="bt1">
+            <button type="button" onclick="window.location.href='main'">领取</button>
+        </div>
+
 
     </div>
 
