--- a/src/main/resources/templates/bm_pay.html
+++ b/src/main/resources/templates/bm_pay.html
@@ -41,14 +41,14 @@
 <body>
 <div class="navbar-wrapper">
     <div class="container">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: sandybrown ; height: 50px">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html" style="font-size:32px;">啃得鸡霾当烙得客势外卖专家</a>
+                    <div><a class="navbar-brand" href="/" style="font-size:32px;">啃得鸡霾当烙得客势外卖专家</a></div>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse" style="float:right;">
                     <ul class="nav navbar-nav navbar-right">
-
+                        <li style="padding-top: 15px">欢迎你：<span th:text="${session.userName}"></span></li>
                         <li><a href="user_center">个人中心</a></li>
                         <li><a href="loginOut">注销</a></li>
                     </ul>
