--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -3,25 +3,27 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>订单</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="keys" content="">
+    <meta name="author" content="">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>我的订单</title>
     <style>
         .divo1{
             float:left;
             width:50%;
             height: 600px;
-            background-color: #00CCFF;
-            border-color: #00CCFF;
+            border: 1px solid gray;
         }
         .divi1{
             float: left;
             width: 48%;
             height: 600px;
-            background-color: #eea236;
-            border-width: 10px;
-            border-color: #122b40;
+            border: 1px solid gray;
         }
         .divi2{
             height: 115px;
@@ -46,9 +48,9 @@
             background:#fff;
         }
         button.active{
-            background:green;
+            background: gold;
         }
-        #aads{
+        a{
             float: right;
         }
         .btsmal{
@@ -63,28 +65,25 @@
 <body>
 <div class="navbar-wrapper">
     <div class="container">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: white; height: 50px">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: sandybrown ; height: 50px">
             <div class="container">
                 <div class="navbar-header">
-                    <p>当前选择的位置：<span />  </p>
+                    <div><a class="navbar-brand" href="/" style="font-size:32px;">啃得鸡霾当烙得客势外卖专家</a></div>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse" style="float:right;">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="login">个人中心</a></li>
-                        <li><a href="reg">设置</a></li>
+                        <li style="padding-top: 15px">欢迎你：<span th:text="${session.userName}"></span></li>
+                        <li><a href="user_center">个人中心</a></li>
+                        <li><a href="loginOut">注销</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div>
-            <a class="navbar-brand" href="/" style="font-size:32px;">啃得鸡霾当烙得客势外卖专家</a>
-        </div>
-
     </div>
 </div>
 <div class="divo1">
 
-    <h2>订单详情</h2><a>返回商家修改</a>
+    <h2>订单详情</h2><a href="drink">返回商家修改</a>
     <div class="table-responsive">
         <table class="table  table-bordered">
             <thead>
@@ -141,10 +140,13 @@
         </div>
         <div class="divi2">
             <span>使用优惠</span>
-            <div class="btsmal">
-                <button id="btn3" style="width: 150px;height: 70px;">5元</button>  <button id="btn4" style="width: 150px;height: 70px;">10元</button>
-            </div>
-            
+                <label>
+                <tr th:each="coupon:${allUrCoupon}">
+                    <td>
+                        <input th:value="${coupon.getCvalue()}" readonly style="width: 100px"/><input type="radio" name="couponsss"/><br>
+                    </td>
+                </tr>
+                </label>
 
         </div>
     </div>
@@ -183,7 +185,11 @@
 <script src="jquery/jquery-2.1.1.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script>
-    $('#btn','#btn2','#btn3','#btn4').click(function(){//给id为btn的元素添加点击事件
+    $('#btn').click(function(){//给id为btn的元素添加点击事件
+        $(this).toggleClass('active');//每次点击的时候，将当前的元素切换active样式
+                                      //如果有，则去掉，否则添加
+    });
+    $('#btn2').click(function(){//给id为btn的元素添加点击事件
         $(this).toggleClass('active');//每次点击的时候，将当前的元素切换active样式
                                       //如果有，则去掉，否则添加
     });
